// Copyright: Ankitects Pty Ltd and contributors
// License: GNU AGPL, version 3 or later; http://www.gnu.org/licenses/agpl.html

syntax = "proto3";

package anki.field;

message FieldConfig {
  bool sticky = 1;
  bool rtl = 2;
  string font_name = 3;
  uint32 font_size = 4;
  string description = 5;
  bool plain_text = 6;
  bool collapsed = 7;
  bool exclude_from_search = 8;
  // used for merging notetypes on import (Anki 23.10)
  optional int64 id = 9;
  // Can be used to uniquely identify required fields.
  optional uint32 tag = 10;
  bool prevent_deletion = 11;

  bytes other = 255;
}