// Copyright: Ankitects Pty Ltd and contributors
// License: GNU AGPL, version 3 or later; http://www.gnu.org/licenses/agpl.html

syntax = "proto3";

package anki.notetypes;

message UInt32 {
  uint32 val = 1;
}

message TemplateConfig {
  string q_format = 1;
  string a_format = 2;
  string q_format_browser = 3;
  string a_format_browser = 4;
  int64 target_deck_id = 5;
  string browser_font_name = 6;
  UInt32 browser_font_size = 7;
  // used for merging notetypes on import (Anki 23.10)
  optional int64 id = 8;

  bytes other = 255;
}
